Change search criteria for production order (no longer salesorder related) and shift Quantity field so it's visible even when showing error. Fix Sales order bug when no Routing is attached

--- a/aps/src/modules/shared/components/input/input.scss
+++ b/aps/src/modules/shared/components/input/input.scss
@@ -144,6 +144,7 @@
         color: $red-color;
         border-radius: 8px;
         height: 100%;
+        margin-bottom:-20px;
       }
     }
 
